--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "hadith-api",
   "version": "1.0.0",
   "description": "hadith api based on sunnah.com",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "hadith",
